# aimio-py

./: .coverage  .gitignore  .gitmodules  AimIO  MANIFEST.in  README.md  coverage.xml  environment.yml  pyproject.toml  setup.cfg  setup.py  vtk_utils.py
.github/agents/auditing-python-security/: README.md  agent.yml
.github/agents/building-python-clis/: README.md  agent.yml
.github/agents/building-python-communities/: README.md  agent.yml
.github/agents/designing-python-apis/: README.md  agent.yml
.github/agents/documenting-python-libraries/: README.md  agent.yml
.github/agents/improving-python-code-quality/: README.md  agent.yml
.github/agents/managing-python-releases/: README.md  agent.yml
.github/agents/optimizing-python-performance/: README.md  agent.yml
.github/agents/packaging-python-libraries/: README.md  agent.yml
.github/agents/reviewing-python-libraries/: README.md  agent.yml
.github/workflows/: build-publish.yml  build-wheels.yml  docs.yml  publish-from-run.yml  tests.yml
bindings/: aimio_bindings.cpp
data/: CALLUS_1237.AIM  CALLUS_1240.AIM  DB_07_DNN_DR_T1_TRAB_MASK.AIM  TRAB_1237.AIM  TRAB_1240.AIM  TRAB_1240_MANIPULATED_HEADER.AIM  TRAB_1240_SEG.AIM
docs/: Makefile  PUBLISHING.md
docs/source/: api.rst  conf.py  index.rst  publishing.rst  usage.rst
py_aimio/: __init__.py  calibration.py  cli.py  converters.py  gobj.py  header_log.py  scv.py
scripts/: add_submodule.sh
tests/: test_api_unit.py  test_bindings.py  test_calibration_unit.py  test_cli_unit.py  test_gobj_bindings.py  test_header_log_unit.py  test_isq_bindings.py  test_isq_fixtures.py  test_packaging.py  test_processing_log_roundtrip.py  test_scv_bindings.py
tests/data/: README.md  test_isq_calibrated_binary_25.ISQ  test_isq_native_only_binary_25.ISQ
(+4 files in other folders)
