[metadata]
name = py-aimio
version = 0.0.0
description = Minimal Python packaging for Numerics88 AimIO C++ library
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
license = MIT
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License

[options]
packages = find:
install_requires =
  numpy>=1.20
include_package_data = True
zip_safe = False

[options.packages.find]
where = .
