[metadata]
name = py-aimio
version = 0.1.0
description = Python bindings for the Numerics88 AimIO C++ library
long_description = file: README.md
long_description_content_type = text/markdown
author = Matthias Walle
author_email = matthias.walle@ucalgary.ca
url = https://github.com/wallematthias/aimio-py
project_urls =
  Documentation = https://github.com/wallematthias/aimio-py#readme
  Source = https://github.com/wallematthias/aimio-py
  Issues = https://github.com/wallematthias/aimio-py/issues
license = MIT
classifiers =
  Development Status :: 4 - Beta
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Programming Language :: Python :: 3.13
  Programming Language :: C++
  Operating System :: OS Independent
  Intended Audience :: Science/Research
  Topic :: Scientific/Engineering :: Image Processing

[options]
packages = find:
install_requires =
  numpy>=1.20
include_package_data = True
zip_safe = False
python_requires = >=3.10

[options.packages.find]
where = .

[options.extras_require]
dev =
  build
  cibuildwheel
  pytest
  twine
  sphinx>=7
docs =
  sphinx>=7
